# BJTUSE-undergraduate

./: README.md
grade_1_1/程序设计基础-cxd/exercise 1/: 1.docx  2.cpp
grade_1_1/程序设计基础-cxd/exercise 10/20301174-万兴全-exercise 大作业/: 可执行程序+必需的数据文件.rar  文档.rar  源程序.rar
grade_1_1/程序设计基础-cxd/exercise 2/: 10.4.1.cpp  10.4.2.cpp  10.4.3.cpp  10.4.4.cpp
grade_1_1/程序设计基础-cxd/exercise 3/: practice1.c  practice2.c  practice3.c  practice4.c
grade_1_1/程序设计基础-cxd/exercise 4/: exercise1.c  exercise4 .c
grade_1_1/程序设计基础-cxd/exercise 4/20301174-万兴全-exercise 4/: exercise 5.c  exercise2.c  exercise3.c
grade_1_1/程序设计基础-cxd/exercise 5/: task1.c  task2.c  task4.c
grade_1_1/程序设计基础-cxd/exercise 5/20301174-万兴全-exercise 5/: task3.c
grade_1_1/程序设计基础-cxd/exercise 6/: 20301174-万兴全-exercise 8.rar  task1.c  task2.c  task5.c
grade_1_1/程序设计基础-cxd/exercise 6/20301174-万兴全-exercise 6/: task3.c  task4.c
grade_1_1/程序设计基础-cxd/exercise 7/20301174-万兴全-exercise 7/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c
grade_1_1/程序设计基础-cxd/exercise 8/: Exercise2.txt  Exercise_2_1.txt  Exercise_2_2.txt
grade_1_1/程序设计基础-cxd/exercise 8/20301174-万兴全-exercise 8/: Exercise_3.txt  Holidays.txt  task1.c  task2.c  task3.c  task4.c  task5.c
grade_1_1/程序设计基础-cxd/exercise 9/: Makefile.win  dict.h  dictionary.txt  main.c  message.txt  task1.c  task2.c  task3.c  task4.c  task5.dev
grade_1_1/程序设计基础-cxd/exercise 9/20301174-万兴全-exercise9/: dict.c  record.txt  task5.layout
grade_2_1/专业实训1/Proj02Calculator/Calc_algorithm/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
grade_2_1/专业实训1/Proj02Calculator/Calc_algorithm/StyleSheet/: style.css
grade_2_1/专业实训1/Proj02Calculator/Proj02Calculator/: CMakeLists.txt  main.cpp  style.css  window.cpp  window.h  window.ui
grade_2_1/专业实训1/Proj03ParkingLotManagement/Proj03ParkingLotManagement/: CMakeLists.txt  DOC.md  main.cpp  node.h
grade_2_1/专业实训1/Proj03ParkingLotManagement/Proj03ParkingLotManagement 1/: CMakeLists.txt  node.h
grade_2_1/专业实训1/Proj04_Compression/: CMakeLists.txt  function.cpp  huffman_Tree.cpp  main.cpp  mainwindow.cpp
grade_2_1/专业实训1/Proj04_Compression/Proj04CompressingSoftware/Proj04CompressingSoftware/: CMakeLists.txt  doc.docx  main.cpp
grade_2_1/专业实训1/Proj04_Compression/Proj04CompressingSoftware/Proj04CompressingSoftware/header/: Compress.h  Extract.h  HuffmanTree.h
grade_2_1/专业实训1/Proj04_Compression/Proj04Compressing_Software/: CMakeLists.txt  compress_and_extract.cpp  huffmantree.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  read_file.cpp
grade_2_1/专业实训1/Proj04_Compression/Proj04Compressing_Software/header/: huffmantree.h  main.h  read_file.h  ui_mainwindow.h
grade_2_1/专业实训1/Proj04_Compression/huf/: CMakeLists.txt  huffmantree.cpp  huffmantree.h  iobmp.cpp  iobmp.h  main.h  mainwindow.cpp  mainwindow.h  read_file.cpp  read_file.h
grade_2_1/专业实训1/Proj04_Compression/huffmanCompression/: CMakeLists.txt  fileio.cpp  fileio.h  huffmantree.cpp  huffmantree.h  ioimg.cpp  ioimg.h  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
grade_2_1/专业实训1/Proj04_Compression/include/: function.h  huffman_Tree.h  mainwindow.h
grade_2_1/专业实训1/Proj05AttractionManagement/Proj05_sightmanagement/: CMakeLists.txt  algorithms.cpp  algorithms.h  landscape.h  landscape.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  path.h  path.txt  read_file.h  景点管理应用.docx
grade_2_1/专业实训1/Proj05AttractionManagement/ScenicInformationManagementSystem/: CMakeLists.txt  ScenicInformationManagementSystem.pro  graph.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  operation.h  rungraph.cpp  rungraph.h  ui_mainwindow.h
grade_2_1/专业实训1/bejeweled/: Bejeweled.pro  Bejeweled.pro.user.c55eea9  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Global.cpp  Global.h  RankLogic.h  RankStorage.cpp  RankStorage.h  WindowAbout.cpp  WindowFirst.cpp  WindowFirst.h  WindowFirst.ui  WindowGame.cpp  WindowIntro.cpp  WindowIntro.ui  WindowMusic.cpp  WindowMusic.h  WindowMusic.ui  WindowRank.h  WindowTheme.cpp  WindowTheme.ui  WindowUser.cpp  WindowUser.ui  main.cpp  resource.qrc  ui_WindowGame.h
grade_2_1/专业实训1/最终大项目-宝石迷阵/: Bejeweled.pro.user.8b705a9  CRankDao.cpp  MusicControl.cpp  MusicControl.h  RankLogic.cpp  WindowAbout.h  WindowAbout.ui  WindowGame.h  WindowGame.ui  WindowIntro.h  WindowRank.cpp  WindowRank.ui  WindowTheme.h  WindowUser.h  ui_WindowFirst.h  ui_WindowMusic.h  ui_WindowUser.h
grade_2_2/专业实训Ⅱ cxd/DBMS项目/: README.md  database.db
grade_2_2/专业实训Ⅱ cxd/DBMS项目/DBMS/: pom.xml
grade_2_2/专业实训Ⅱ cxd/DBMS项目/DBMS/src/main/java/UI/: login_Window.form  login_Window.java  main_Window.form  main_Window.java
grade_2_2/专业实训Ⅱ cxd/DBMS项目/DBMS/src/main/java/com/Data/: Delete.java  Insert.java  Select.java  (+1 more)
grade_2_2/专业实训Ⅱ cxd/DBMS项目/DBMS/src/main/proto/: DBMS.proto
grade_2_2/专业实训Ⅱ cxd/DBMS项目/DBMS/src/test/java/: test_database.java
grade_2_2/专业实训Ⅱ cxd/Web MIS项目/FlightTicket/: settings.py
grade_2_2/专业实训Ⅱ cxd/Web MIS项目/booksystem/: admin.py  views.py
grade_2_2/专业实训Ⅱ cxd/Web MIS项目/booksystem/migrations/: 0003_auto_20220603_1941.py  0004_auto_20220604_1205.py  0005_auto_20220604_1208.py
grade_2_2/专业实训Ⅱ cxd/Web MIS项目/booksystem/templates/booksystem/: admin_finance.html  base.html  book_flight.html  index.html  login.html  register.html  result.html  user_info.html
grade_2_2/专业实训Ⅱ cxd/实验报告过程产物/: DBMS-环境配置  DBMS-设计文档参考-20301174-万兴全.md  FFF.cdb  FFF.cdm  SQL.sql  UML用例.eddx  aaaa.sql  aaaaaa.pdm  crebas.sql  networkShoppingSystem.cdb  networkShoppingSystem.cdm  networkShoppingSystem2.pdm  van.sql  vanaaaaa.sql  专题1、2--SQL命令与存储过程触发器---调整后.doc  专题3--数据库设计.docx  实验报告1-20301174-万兴全.md  实验报告2-20301174-万兴全.md  实验报告3-20301174-万兴全.md  实验报告4-20301174-万兴全.md  实验报告5(存储过程与触发器).docx  实验报告5-20301174-万兴全.md  实验报告6-20301174-万兴全.md  对外接口需求.md  工作空间.sws  教学日历.docx  教学日历.md  网上购物.cdm  设计报告1-20301174-万兴全.md
grade_3_1/OS-zhangdi/OSHW1/: 实验报告.md
grade_3_1/OS-zhangdi/OSHW1/OSHW1-Java/: AllPrimeNumber.java
grade_3_1/OS-zhangdi/OSHW1/OSHW1-Pthread/: CMakeLists.txt
grade_3_1/操作系统/OSHW1/OSHW1-Java/: ThreadDemo.java
grade_3_1/操作系统/OSHW1/OSHW1-Pthread/: main.cpp
(+12 files in other folders)
